k8s/file-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-service
  labels:
    app: file-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-service
  template:
    metadata:
      labels:
        app: file-service
    spec:
      containers:
      - name: file-service
        image: siddpunk/messagepunk-file-service
        ports:
        - containerPort: 4300
---

apiVersion: v1
kind: Service
metadata:
  name: file-service
  labels:
    app: file-service
spec:
  selector:
    app: file-service
  ports:
    - protocol: TCP
      port: 4300
      targetPort: 4300
  type: ClusterIP
