k8s/notification-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: siddpunk/messagepunk-notification-service
        ports:
        - containerPort: 4400
---

apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 4400
      targetPort: 4400
  type: ClusterIP
