k8s/socket-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-service
  labels:
    app: socket-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socket-service
  template:
    metadata:
      labels:
        app: socket-service
    spec:
      containers:
      - name: socket-service
        image: siddpunk/messagepunk-socket-service
        ports:
        - containerPort: 4200
---

apiVersion: v1
kind: Service
metadata:
  name: socket-service
  labels:
    app: socket-service
spec:
  selector:
    app: socket-service
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
  type: ClusterIP
