k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-buffering: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Upgrade $http_upgrade;
      proxy_set_header Connection "upgrade";

spec:
  rules:
  - host: messagepunk.com
    http:
      paths:
      - path : /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 4000
      - path : /api/socket
        pathType: Prefix
        backend:
          service:
            name: socket-service
            port:
              number: 4200
      - path : /api/db
        pathType: Prefix
        backend:
          service:
            name: db-service
            port:
              number: 4100
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
